feat: port Twilight Forest to Minecraft 1.21.1 Fabric
Migrates from NeoForge 1.21.1 → Fabric Loader 0.16+ / Fabric API on MC 1.21.1.

Key changes:
- Replace NeoForge capability/event system with Fabric equivalents (Trinkets, Fabric API events)
- Implement twilightforest:components CustomIngredient via fabric-recipe-api-v1 to preserve
  potion-specific component matching in travellers gear modifier recipes
- Translate neoforge:difference → fabric:difference; multi-alternative arrays → fabric:any
- Add Jade (jade entrypoint) integration; IWailaPlugin registered via fabric.mod.json
- Add all missing data files for 1.21.1 parity: 23 damage_type JSONs, 101 placed_feature JSONs,
  95 configured_feature JSONs, 2 noise_settings, 1 density_function, 18 tag files
- Replace NeoForge @Mod / @EventBusSubscriber with Fabric entrypoints
- Implement BlockEntityRendererFactories, BlockRenderLayers, particle factories, color providers
- Remove dead code (deprecated unused methods, commented-out constants, old algorithm stubs)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>